vless-server/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vless-server
  labels:
    app: vless-server
spec:
  type: ClusterIP
  selector:
    app: vless-server
  ports:
    - name: vless
      port: 443
      targetPort: vless
      protocol: TCP
