vless-server/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vless-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "TCP"
spec:
  tls:
    - hosts:
        - vless.outi.ir
      secretName: vless-server-tls
  rules:
    - host: vless.outi.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vless-server
                port:
                  number: 443
